# English_learn_2

./: README.md  dictionary.db  main.py  pyproject.toml  server.py  setting.py  voice.py
data/: Zootopia.srt  Zootopia_ru.srt  data.py  insert_dictionary.py  insert_words.py  srt.py  Зверополис.srt
data/trip/: d_1.py  d_2.py
db/: create_db.py  select.py  update.py
html_template/: template_choise.tpl  template_start.tpl  template_word.tpl
